# ostap

./: README.md  pyproject.toml
ostap/: cli.py  ostap.py
ostap/templates/: game.css  game.html
